[project]
name = "documentationnavigator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "gitsource>=0.0.4",
    "jupyter>=1.1.1",
    "minsearch>=0.0.10",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.1",
]
